digisense-FDW_sync-.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  digisense-fromfdw
  labels:
    app:  digisense-fromfdw
spec:
  selector:
    matchLabels:
      app: digisense-fromfdw
  replicas: 2
  template:
    metadata:
      labels:
        app:  digisense-fromfdw
    spec:
      containers:
      - name:  digisense-fromfdw
        image:  asia.gcr.io/digisense-fd-236012/getfromfdw
        resources:
         limits:
          cpu: 25m
        ports:
        - containerPort:  80
      restartPolicy: Always
