digisense-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  digisense-portal
  labels:
    app:  digisense-portal
spec:
  selector:
    matchLabels:
      app: digisense-portal
  replicas: 3
  template:
    metadata:
      labels:
        app:  digisense-portal
    spec:
      containers:
      - name:  digisense-portal
        image:  asia.gcr.io/digisense-fd-236012/adminportal
        resources:
         limits:
          cpu: 33m
        ports:
        - containerPort:  80
      restartPolicy: Always
