digisense-appshare.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  digisense-appshare
  labels:
    app:  digisense-appshare
spec:
  selector:
    matchLabels:
      app: digisense-appshare
  replicas: 1
  template:
    metadata:
      labels:
        app:  digisense-appshare
    spec:
      containers:
      - name:  digisense-appshare
        image:  asia.gcr.io/digisense-fd-236012/appshare
        resources:
         limits:
          cpu: 100m
          memory: 100Mi
         requests:
          cpu: 25m
          memory: 50Mi
        ports:
        - containerPort:  80
      restartPolicy: Always
