digisense-banners.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  digisense-banners
  labels:
    app:  digisense-banners
spec:
  selector:
    matchLabels:
      app: digisense-banners
  replicas: 1
  template:
    metadata:
      labels:
        app:  digisense-banners
    spec:
      containers:
      - name:  digisense-enquiry
        image:  asia.gcr.io/digisense-fd-236012/banners
        resources:
         limits:
          cpu: 150m
          memory: 350Mi
         requests:
          cpu: 100m
          memory: 100Mi
        ports:
        - containerPort:  80
      restartPolicy: Always
