digisense-enquiry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  digisense-enquiry
  labels:
    app:  digisense-enquiry
spec:
  selector:
    matchLabels:
      app: digisense-enquiry
  replicas: 1
  template:
    metadata:
      labels:
        app:  digisense-enquiry
    spec:
      containers:
      - name:  digisense-enquiry
        image:  asia.gcr.io/digisense-fd-236012/enquiry
        resources:
         limits:
          cpu: 60m
        ports:
        - containerPort:  80
      restartPolicy: Always
