digisense-mandi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  digisense-mandi
  labels:
    app:  digisense-mandi
spec:
  selector:
    matchLabels:
      app: digisense-mandi
  replicas: 1
  template:
    metadata:
      labels:
        app:  digisense-mandi
    spec:
      containers:
      - name:  digisense-mandi
        image:  asia.gcr.io/digisense-fd-236012/mandi
        resources:
         limits:
          cpu: 150m
        ports:
        - containerPort:  80
      restartPolicy: Always
