digisense-masterapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  digisense-masterapi
  labels:
    app:  digisense-masterapi
spec:
  selector:
    matchLabels:
      app: digisense-masterapi
  replicas: 1
  template:
    metadata:
      labels:
        app:  digisense-masterapi
    spec:
      containers:
      - name:  digisense-masterapi
        image:  asia.gcr.io/digisense-fd-236012/masters-api
        resources:
         limits:
          cpu: 180m
        ports:
        - containerPort:  80
      restartPolicy: Always
