digisense-masters.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  digisense-masters
  labels:
    app:  digisense-masters
spec:
  selector:
    matchLabels:
      app: digisense-masters
  replicas: 3
  template:
    metadata:
      labels:
        app:  digisense-masters
    spec:
      containers:
      - name:  digisense-masters
        image:  asia.gcr.io/digisense-fd-236012/masters
        ports:
        - containerPort:  80
      restartPolicy: Always
