digisense-subscription.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  digisense-subscription
  labels:
    app:  digisense-subscription
spec:
  selector:
    matchLabels:
      app: digisense-subscription
  replicas: 3
  template:
    metadata:
      labels:
        app:  digisense-subscription
    spec:
      containers:
      - name:  digisense-subscription
        image:  asia.gcr.io/digisense-fd-236012/subscription
        resources:
         limits:
          cpu: 25m
        ports:
        - containerPort:  80
      restartPolicy: Always
