digisense-unifiedlogin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  digisense-unifiedlogin
  labels:
    app:  digisense-unifiedlogin
spec:
  selector:
    matchLabels:
      app: digisense-unifiedlogin
  replicas: 1
  template:
    metadata:
      labels:
        app:  digisense-unifiedlogin
    spec:
      containers:
      - name:  digisense-unifiedlogin
        image:  asia.gcr.io/digisense-fd-236012/unifiedlogin
        resources:
         limits:
          cpu: 180m
        ports:
        - containerPort:  80
      restartPolicy: Always
