deployment-mysql-uat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mysql
  labels:
    app:  mysql
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app:  mysql
    spec:
      containers:
      - name:  mysql
        image:  mysql:latest
        ports:
        - containerPort:  3306
          name:  mysql
        volumeMounts:
        - name: digisense-mysql-pv
          mountPath: /var/lib/mysql
      volumes:
        - name: digisense-mysql-pv
          persistentVolumeClaim:
                claimName: admin-portal-mysql-pvc
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: digisense-mysql
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
  - name: db
    port: 3306
  clusterIP: None
