digisense-FDW_sync-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digisense-fromfdwsvc
spec:
  selector:
    app: digisense-fromfdw
  type: NodePort
  ports:
  - port: 8001 
    targetPort: 80
    protocol: TCP
