digisense-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digisense-portal-svc
spec:
  selector:
    app: digisense-portal
  type: ClusterIP
  ports:
  - port: 8001 
    targetPort: 80 
    protocol: TCP
