digisense-appshare-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digisense-digisense-appshare-svc
spec:
  selector:
    app: digisense-digisense-appshare
  type: NodePort
  ports:
  - port: 8001 
    targetPort: 80 
    protocol: TCP
