digisense-enquiry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digisense-enquiry-svc
spec:
  selector:
    app: digisense-enquiry
  type: NodePort
  ports:
  - port: 8001 
    targetPort: 80
    protocol: TCP
