digisense-mandi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digisense-mandi-svc
spec:
  selector:
    app: digisense-mandi
  type: NodePort
  ports:
  - port: 8001 
    targetPort: 80
    protocol: TCP
