digisense-masterapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digisense-masterapi-svc
spec:
  selector:
    app: digisense-masterapi
  type: NodePort
  ports:
  - port: 8001 
    targetPort: 80
    nodePort: 30001
    protocol: TCP
