digisense-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digisense-mysql
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
  - name: db
    port: 3306
  clusterIP: None
