digisense-unifiedlogin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digisense-unifiedlogin-svc
spec:
  selector:
    app: digisense-unifiedlogin
  type: NodePort
  ports:
  - port: 8001 
    targetPort: 80
    nodePort: 30002
    protocol: TCP
